--- a/learning/web/flask/microblog/app/templates/base.html
+++ b/learning/web/flask/microblog/app/templates/base.html
@@ -5,6 +5,7 @@
     {% else %}
     <title>microblog</title>
     {% endif %}
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
   </head>
   <body>
     <div>Microblog: <a href="/index">Home</a></div>
