--- a/learning/web/flask/microblog/app/static/css/style.css
+++ b/learning/web/flask/microblog/app/static/css/style.css
@@ -1,18 +1,20 @@
-body            { font-family: sans-serif; background: #feee; }
-a, h1, h2       { color: #377ba8; }
-h1, h2          { font-family: 'Georgia', serif; margin: 0; }
+@import 'https://fonts.googleapis.com/css?family=Raleway';
+@import 'https://fonts.googleapis.com/css?family=Lobster';
+body            { font-family: 'Raleway', sans-serif; background: #feee; }
+a, h1, h2       { color: black; }
+h1, h2          { font-family: 'Lobster', serif; margin: 0; }
 h1              { border-bottom: 2px solid #eee; }
 h2              { font-size: 1.2em; }
 
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
-                  padding: 0.8em; background: white; }
-.entries        { list-style: none; margin: 0; padding: 0;}
-.entries li     { margin: 0.8em 1.2em; }
+                  padding: 0.7em; background: white; }
+.entries        { list-style: none; margin: 0; padding: 0; font-size:0.75em;}
+.entries li     { margin: 0.7em 1.2em; }
 .entries li h2  { margin-left: -1em; }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
+.add-entry      { font-size: 0.75em; border-bottom: 1px solid #ccc; }
 .add-entry dl   { font-weight: bold; }
-.metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
+.metanav        { text-align: left; font-size: 0.70em; padding: 0.3em;
                   margin-bottom: 1em; background: #fafafa; }
-.flash          { background: #cee5F5; padding: 0.5em;
+.flash          { background: #cee5F5; padding: 0.75em;
                   border: 1px solid #aacbe2; }
-.error          { background: #f0d6d6; padding: 0.5em; }
+.error          { background: #f0d6d6; padding: 0.75em; }
